--- a/style.css
+++ b/style.css
@@ -377,3 +377,57 @@ section .pan {
 section .pan2 {
     padding: 6px;
 }
+
+.hidden {
+    display: none;
+}
+
+#menu-container {
+    position: absolute;
+    top: 100%;
+    right: 7px;
+    background-color: rgba(255, 255, 255, 0.500);
+    padding: 30px;
+}
+
+#menu-items {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    flex-direction: column;
+    gap: 20px;
+    position: relative;
+    right: 8px;
+}
+
+#menu-items a {
+    display: block;
+    padding: 5px;
+    text-decoration: none;
+    color: #000000;
+}
+
+#menu-toggle {
+    cursor: pointer;
+}
+
+li:hover {
+    background-color: rgba(128, 128, 128, 0.400);
+    transition: 0.5s;
+    margin-right: -38px;
+    position: relative;
+
+}
+
+@media (max-width: 981px) {
+    .polera {
+        display: none;
+    }
+}
+
+@media (min-width: 982px) {
+    #menu-container {
+        display: none;
+    }
+}
+
